Code refactoring + implementation of Jaeger for tracing
