# docs/swagger.json
@@ -8,7 +8,7 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/consul/secret": {
+        "/api/v1/consul/secret": {
             "get": {
                 "description": "Fetches a secret from Consul Key Vault and returns it as JSON",
                 "produces": [
@@ -18,6 +18,34 @@
                     "Consul"
                 ],
                 "summary": "Get secret from Consul KV",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/vault/secret": {
+            "get": {
+                "description": "Fetches a secret from Vault Key Vault and returns it as JSON",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Vault"
+                ],
+                "summary": "Get secret from Vault KV",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -641,34 +669,6 @@
                     },
                     "404": {
                         "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
-        },
-        "/vault/secret": {
-            "get": {
-                "description": "Fetches a secret from Vault Key Vault and returns it as JSON",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Vault"
-                ],
-                "summary": "Get secret from Vault KV",
-                "responses": {
-                    "200": {
-                        "description": "OK",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
