# internal/api/handlers/consul_handler.go
@@ -4,7 +4,9 @@ import (
 	"net/http"
 
 	"go-fhir-demo/config"
+	"go-fhir-demo/pkg/logger"
 	"go-fhir-demo/pkg/utils"
+	"go-fhir-demo/pkg/utils/tracer"
 
 	"github.com/gin-gonic/gin"
 )
@@ -29,8 +31,13 @@ func NewConsulHandler(cfg *config.ConsulConfig) ConsulHandlerInterface {
 // @Produce json
 // @Success 200 {object} map[string]interface{}
 // @Failure 500 {object} map[string]interface{}
-// @Router /consul/secret [get]
+// @Router /api/v1/consul/secret [get]
 func (h *ConsulHandler) GetConsulSecret(c *gin.Context) {
+	// Start a child span for the background job
+	ctx, span := tracer.StartSpan(c.Request.Context(), "GetConsulSecret")
+	defer span.End()
+
+	logger.WithContext(ctx).Infof("Fetching secret from Consul KV at %s with key %s", h.cfg.Address, h.cfg.Key)
 	data, err := utils.GetConsulKV(h.cfg.Address, h.cfg.Key)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{
